--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posture-fix",
+  "name": "posture-fix-created-by-rehabugrahanozel",
   "version": "0.1.0",
   "private": true,
   "scripts": {
