--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "gh-pages-deploy": "node scripts/gh-pages-deploy.js"
+    "gh-pages-deploy": "node scripts/gh-pages-deploy.js",
+    "github-pages": "node scripts/github-pages.js"
   },
   "dependencies": {
     "@videojs-player/vue": "^1.0.0",
     "core-js": "^3.8.3",
+    "shelljs": "^0.8.5",
     "video.js": "^8.0.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "yargs": "^3.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
