--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "gh-pages-deploy": "node scripts/gh-pages-deploy.js",
-    "github-pages": "node scripts/github-pages.js"
+    "github-pages": "node scripts/commands.js"
   },
   "dependencies": {
     "@videojs-player/vue": "^1.0.0",
