--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "github-pages": "node scripts/commands.js"
+    "commands": "node scripts/commands.js"
   },
   "dependencies": {
     "@videojs-player/vue": "^1.0.0",
