--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@videojs-player/vue": "^1.0.0",
     "core-js": "^3.8.3",
+    "gsap": "^3.11.5",
     "shelljs": "^0.8.5",
     "video.js": "^8.0.4",
     "vue": "^3.2.13",
