--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@videojs-player/vue": "^1.0.0",
     "core-js": "^3.8.3",
     "gsap": "^3.11.5",
+    "nprogress": "^0.2.0",
     "shelljs": "^0.8.5",
     "video.js": "^8.0.4",
     "vue": "^3.2.13",
