--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@videojs-player/vue": "^1.0.0",
     "core-js": "^3.8.3",
+    "firebase": "^9.22.0",
     "gsap": "^3.11.5",
     "nprogress": "^0.2.0",
     "shelljs": "^0.8.5",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vue3-otp-input": "^0.4.1",
+    "vuex": "^4.1.0",
     "yargs": "^3.9.0"
   },
   "devDependencies": {
