--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nprogress": "^0.2.0",
     "shelljs": "^0.8.5",
     "vue": "^3.2.13",
+    "vue-picture-input": "^2.2.1",
     "vue-router": "^4.1.6",
     "vue3-otp-input": "^0.4.1",
     "vuex": "^4.1.0",
