--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@videojs-player/vue": "^1.0.0",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "firebase": "^9.22.0",
     "gsap": "^3.11.5",
