--- a/package.json
+++ b/package.json
@@ -55,9 +55,5 @@
     "not dead",
     "not ie 11"
   ],
-  "homepage": "/rehabugrahanozel.github.io/",
-  "browser": {
-    "http": false,
-    "https": false
-  }
+  "homepage": "/rehabugrahanozel.github.io/"
 }
